# Atarayo-Cast

./: .gitignore  CHANGELOG.md  CODEX_PROJECT_CONTEXT.md  README.md  build.sh  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aircast_global_override.h  android_dnssd_shim.c  android_dnssd_shim.h  android_raop_callbacks.c  android_raop_callbacks.h  native_bridge.cpp
app/src/main/java/com/atarayocast/app/: AirCastApp.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/atarayocast/app/audio/: AudioPlayer.kt
app/src/main/java/com/atarayocast/app/bridge/: NativeBridge.kt  NativeCallbacks.kt
app/src/main/java/com/atarayocast/app/data/: AppPrefs.kt
app/src/main/java/com/atarayocast/app/dlna/: DlnaManager.kt  DlnaMediaPlayer.kt  SsdServer.kt  UpnpHttpServer.kt  UpnpXmlBuilder.kt
app/src/main/java/com/atarayocast/app/service/: AirCastService.kt  AirPlayRegistrar.kt  BootReceiver.kt  DisplaySizePolicy.kt
app/src/main/java/com/atarayocast/app/ui/main/: MainViewModel.kt
app/src/main/java/com/atarayocast/app/util/: Constants.kt
app/src/main/java/com/atarayocast/app/video/: VideoDecoder.kt
app/src/main/res/drawable/: bg_brand_icon.xml  bg_main_gradient.xml  bg_media_icon_button.xml  ic_arrow_back_24.xml  ic_cast_24.xml  ic_chevron_right_24.xml  ic_fullscreen_24.xml  ic_fullscreen_exit_24.xml  ic_launcher_foreground.xml  ic_power_24.xml  ic_refresh_24.xml  ic_settings_24.xml  ic_stop_24.xml  scrim_gradient_bottom.xml  status_dot_gray.xml  status_dot_orange.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/atarayocast/app/service/: DisplaySizePolicyTest.kt
docs/: video-optimization-plan.html
gradle/: libs.versions.toml
